# connaq-mvp

./: .dockerignore  .env  Dockerfile  package-lock.json  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/connection/: database.py
app/data_types/: __init__.py
app/models/: user_schema.py
app/routes/: protected_routes.py  user_routes.py
app/scripts/: test_db.py  test_login.py  test_login2.py  test_register.py  test_schema.py  test_user.py
app/services/: auth_service.py  user_service.py
app/utils/: jwt_utils.py
connaqVenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
